--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,12 @@ public/uploads/*
 !public/uploads/.gitkeep
 *.pem
 
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # Node.js, Dependency directories & Logs
 lib-cov
 lcov.info
@@ -114,6 +120,8 @@ exports
 
 # TypeScript v1 declaration files
 typings/
+*.tsbuildinfo
+next-env.d.ts
 
 # Optional eslint cache
 .eslintcache
